<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/initTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/init_test_button"
        android:text="@string/init_test_button"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/testBox"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/test_box"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/initTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507">

        <TextView
            android:id="@+id/testQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/test_q_and_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            tools:text="@string/test_question"
            android:text="@string/test_question"/>

        <TextView
            android:id="@+id/testAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/test_q_and_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testQuestion"
            app:layout_constraintVertical_bias="0.3"
            tools:text="@string/test_answer"
            android:text="@string/test_answer"/>

        <TextView
            android:id="@+id/testExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_explanation"
            android:textColor="@color/black"
            android:textSize="@dimen/test_explanation"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testAnswer"
            app:layout_constraintVertical_bias="0.100000024"
            tools:text="@string/test_explanation" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/endButton"
            app:layout_constraintTop_toBottomOf="@+id/testExplanation"
            tools:text="@string/next_button"
            android:text="@string/next_button"/>

        <Button
            android:id="@+id/endButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testExplanation"
            tools:text="@string/end_button"
            android:text="@string/end_button"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/hint"
            android:src="@android:drawable/ic_lock_lock"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testQuestion" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/moveToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/move_to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/black"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

</androidx.constraintlayout.widget.ConstraintLayout>