<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".WordList">

    <ImageButton
        android:id="@+id/addPair"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_pair_content_description"
        android:onClick="insertItem"
        android:tint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/addAnswer"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <EditText
        android:id="@+id/addQuestion"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/add_word_hint"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addAnswer"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/add_answer_hint"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toEndOf="@+id/addQuestion"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addExplanation"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_explanation_hint"
        android:inputType="textMultiLine"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addQuestion" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAnswer"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/recycler_layout" />

    <ImageButton
        android:id="@+id/shuffleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <ImageButton
        android:id="@+id/sortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shuffleButton"
        app:srcCompat="@android:drawable/ic_menu_sort_alphabetically" />

</androidx.constraintlayout.widget.ConstraintLayout>